# d3_viewer

./: ARCHITECTURE.md  CHECKLIST.md  GPU_RENDERER_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.dart  QUICK_START.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/d3_viewer/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: openfoam_case.dart
lib/parsers/: foam_file_parser.dart
lib/readers/: case_reader.dart  mesh_reader.dart
lib/renderers/: foam_gl_renderer_ffi.dart  mesh_converter.dart
lib/utils/: color_map.dart  field_interpolation.dart  file_utils.dart  file_utils_example.dart
lib/widgets/: foam_viewer.dart  foam_viewer_gpu.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: BUILD.md  CMakeLists.txt  build_linux.sh  build_macos.sh  build_windows.bat
native/include/: foam_gl_renderer.h
native/src/: foam_gl_renderer.cpp
test/: file_utils_test.dart  gpu_renderer_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
